Fixing z-index

--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -8,12 +8,12 @@
 
 .right-side.right {
     position: relative;
-    z-index: 0;
+    z-index: -100;
 }
 
 .right-side.left {
     position: relative;
-    z-index: 0;
+    z-index: -100;
 }
 
 .container {
